Bug 112013 - AML-Y: WARNING: CPU: 3 PID: 906 at drivers/gpu/drm/i915/i915_drv.c:177 intel_pch_type+0x383/0x600 [i915]
Summary: AML-Y: WARNING: CPU: 3 PID: 906 at drivers/gpu/drm/i915/i915_drv.c:177 intel_...
Status: RESOLVED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: DRI git
Hardware: x86-64 (AMD64) All
: high critical
Assignee: James Ausmus
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-10-15 23:24 UTC by qwang13
Modified: 2019-10-22 17:10 UTC (History)
3 users (show)

See Also:
i915 platform: KBL
i915 features: display/Other


Attachments
dmesg log (68.69 KB, text/plain)
2019-10-15 23:24 UTC, qwang13
no flags Details
dmesg out with debug option (68.69 KB, text/plain)
2019-10-17 05:22 UTC, qwang13
no flags Details
lspci -vn output (8.43 KB, text/plain)
2019-10-17 05:23 UTC, qwang13
no flags Details

Description qwang13 2019-10-15 23:24:27 UTC
Created attachment 145750 [details]
dmesg log

Platform information:
Label: AMLY01
Processor: Intel(R) Core(TM) i7-10510Y CPU @ 1.20GHz
BIOS: KBLSE2R1.R00.X156.P00.1904261119
OS: Ubuntu 19.10
Kernel: 5.3.0-18-generic

Details:
[ 4.602871] iwlwifi 0000:02:00.0: loaded firmware version 46.6bf1df06.0 op_mode iwlmvm
[ 4.658237] -----------[ cut here ]-----------
[ 4.658238] WARN_ON(!IS_PLATFORM(dev_priv, INTEL_SKYLAKE) && !IS_PLATFORM(dev_priv, INTEL_KABYLAKE))
[ 4.658307] WARNING: CPU: 2 PID: 441 at drivers/gpu/drm/i915/i915_drv.c:196 intel_pch_type+0x219/0x5a0 [i915]
[ 4.658308] Modules linked in: snd_timer mac80211 fjes libarc4 i915 snd hid_sensor_temperature aesni_intel btusb btrtl btbcm btintel iwlwifi bluetooth drm_kms_helper aes_x86_64 crypto_simd intel_xhci_usb_role_switch hid_sensor_accel_3d hid_sensor_incl_3d hid_sensor_als cryptd hid_sensor_press ipu3_cio2 idma64 hid_sensor_gyro_3d glue_helper v4l2_fwnode asix ipu3_imgu(C+) hid_sensor_magn_3d drm hid_sensor_rotation hid_sensor_trigger intel_cstate industrialio_triggered_buffer usbnet ecdh_generic videobuf2_dma_sg kfifo_buf mii intel_rapl_perf input_leds ecc i2c_algo_bit hid_sensor_iio_common serio_raw intel_wmi_thunderbolt videobuf2_memops industrialio fb_sys_fops videobuf2_v4l2 cfg80211 soundcore mei_me 8250_dw roles videobuf2_common syscopyarea mei virt_dma cros_ec_ishtp ucsi_acpi intel_pch_thermal videodev cros_ec_core sysfillrect sysimgblt typec_ucsi mc typec intel_hid mac_hid acpi_pad sparse_keymap acpi_tad sch_fq_codel parport_pc ppdev lp parport ip_tables x_tables autofs4
[ 4.658338] usbhid hid_sensor_custom hid_sensor_hub hid_generic intel_ishtp_loader intel_ishtp_hid hid mmc_block nvme intel_ish_ipc nvme_core sdhci_pci cqhci i2c_i801 sdhci intel_lpss_pci intel_lpss intel_ishtp wmi pinctrl_sunrisepoint pinctrl_intel video
[ 4.658369] CPU: 2 PID: 441 Comm: systemd-udevd Tainted: G C 5.3.0-18-generic #19-Ubuntu
[ 4.658370] Hardware name: Intel Corporation Amberlake Client platform/AmberLake Y 42 LPDDR3 RVP3, BIOS KBLSE2R1.R00.X160.P00.1908091006 08/09/2019
[ 4.658405] RIP: 0010:intel_pch_type+0x219/0x5a0 [i915]
[ 4.658407] Code: c0 bf 04 00 00 00 e8 86 57 b9 ff f7 83 70 06 00 00 00 00 00 0a 75 c5 48 c7 c6 40 ce ca c0 48 c7 c7 9b f2 c9 c0 e8 c2 be f4 da <0f> 0b b8 04 00 00 00 e9 71 fe ff ff 66 81 fe 80 02 0f 85 5d 03 00
[ 4.658408] RSP: 0018:ffffb5d5805d7958 EFLAGS: 00010282
[ 4.658410] RAX: 0000000000000000 RBX: ffff99795ed40000 RCX: 0000000000000000
[ 4.658410] RDX: 0000000000000058 RSI: ffffffff9d581fd8 RDI: 0000000000000246
[ 4.658411] RBP: ffffb5d5805d7968 R08: ffffffff9d581f80 R09: 0000000000000058
[ 4.658412] R10: ffffffff9d582360 R11: 000000009d581f7f R12: ffff997963533000
[ 4.658413] R13: 0000000000009d4b R14: 0000000000009d00 R15: 0000000000000051
[ 4.658414] FS: 00007f32a3b69880(0000) GS:ffff997965a80000(0000) knlGS:0000000000000000
[ 4.658415] CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
[ 4.658416] CR2: 000000c000009b80 CR3: 000000024d53e005 CR4: 00000000003606e0
[ 4.658417] DR0: 0000000000000000 DR1: 0000000000000000 DR2: 0000000000000000
[ 4.658417] DR3: 0000000000000000 DR6: 00000000fffe0ff0 DR7: 0000000000000400
[ 4.658418] Call Trace:
[ 4.658449] i915_driver_init_early+0x1a5/0x570 [i915]
[ 4.658477] i915_driver_load+0x1df/0x5d0 [i915]
[ 4.658494] ? _cond_resched+0x19/0x30
[ 4.658496] ? mutex_lock+0x13/0x40
[ 4.658523] i915_pci_probe+0x5a/0x140 [i915]
[ 4.658526] local_pci_probe+0x48/0x80
[ 4.658528] pci_device_probe+0x10f/0x1b0
[ 4.658532] really_probe+0xfb/0x3a0
[ 4.658534] driver_probe_device+0x5f/0xe0
[ 4.658535] device_driver_attach+0x5d/0x70
[ 4.658537] __driver_attach+0x8f/0x150
[ 4.658538] ? device_driver_attach+0x70/0x70
[ 4.658540] bus_for_each_dev+0x7e/0xc0
[ 4.658541] driver_attach+0x1e/0x20
[ 4.658542] bus_add_driver+0x14f/0x1f0
[ 4.658544] driver_register+0x74/0xc0
[ 4.658545] __pci_register_driver+0x57/0x60
[ 4.658579] i915_init+0x61/0x6c [i915]
[ 4.658581] ? 0xffffffffc0d2a000
[ 4.658584] do_one_initcall+0x4a/0x1fa
[ 4.658587] ? kfree+0x1ef/0x210
[ 4.658588] ? _cond_resched+0x19/0x30
[ 4.658590] ? kmem_cache_alloc_trace+0x163/0x230
[ 4.658593] do_init_module+0x62/0x250
[ 4.658594] load_module+0x10d4/0x1220
[ 4.658597] __do_sys_finit_module+0xbe/0x120
[ 4.658599] ? __do_sys_finit_module+0xbe/0x120
[ 4.658601] __x64_sys_finit_module+0x1a/0x20
[ 4.658606] do_syscall_64+0x5a/0x130
[ 4.658611] entry_SYSCALL_64_after_hwframe+0x44/0xa9
[ 4.658612] RIP: 0033:0x7f32a40dc94d
[ 4.658618] Code: 00 c3 66 2e 0f 1f 84 00 00 00 00 00 90 f3 0f 1e fa 48 89 f8 48 89 f7 48 89 d6 48 89 ca 4d 89 c2 4d 89 c8 4c 8b 4c 24 08 0f 05 <48> 3d 01 f0 ff ff 73 01 c3 48 8b 0d 13 e5 0c 00 f7 d8 64 89 01 48
[ 4.658620] RSP: 002b:00007ffe30456358 EFLAGS: 00000246 ORIG_RAX: 0000000000000139
[ 4.658621] RAX: ffffffffffffffda RBX: 000055cb79035850 RCX: 00007f32a40dc94d
[ 4.658622] RDX: 0000000000000000 RSI: 00007f32a3fb9cad RDI: 0000000000000014
[ 4.658622] RBP: 00007f32a3fb9cad R08: 0000000000000000 R09: 000055cb79035850
[ 4.658623] R10: 0000000000000014 R11: 0000000000000246 R12: 0000000000000000
[ 4.658624] R13: 000055cb7903dea0 R14: 0000000000020000 R15: 000055cb79035850
[ 4.658625] --[ end trace 680dd7a4183446f0 ]--
[ 4.660686] checking generic (a0000000 1fb0000) vs hw (a0000000 10000000)
[ 4.660687] fb0: switching to inteldrmfb from EFI VGA
[ 4.661370] Console: switching to colour dummy device 80x25
[ 4.661461] i915 0000:00:02.0: vgaarb: deactivate vga console
[ 4.664869] iwlwifi 0000:02:00.0: Detected Intel(R) Wireless-AC 9260 160MHz, REV=0x324
[ 4.665895] [drm] Supports vblank timestamp caching Rev 2 (21.10.2013).
[ 4.665896] [drm] Driver supports precise vblank timestamp query.
[ 4.667974] i915 0000:00:02.0: vgaarb: changed VGA decodes: olddecodes=io+mem,decodes=io+mem:owns=io+mem
[ 4.669764] [drm] Finished loading DMC firmware i915/kbl_dmc_ver1_04.bin (v1.4)
[ 4.676207] iwlwifi 0000:02:00.0: Applying debug destination EXTERNAL_DRAM
[ 4.677144] iwlwifi 0000:02:00.0: Allocated 0x00400000 bytes for firmware monitor.
[ 4.690275] ipu3-imgu 0000:00:05.0: loaded firmware version irci_irci_ecr-master_20161208_0213_20170112_1500, 17 binaries, 1212984 bytes
[ 4.722815] iwlwifi 0000:02:00.0: base HW address: 64:5d:86:f5:99:11
Comment 1 qwang13 2019-10-15 23:25:06 UTC
can be reproduced in upstream v5.4-rc2
Comment 2 James Ausmus 2019-10-16 15:39:19 UTC
Can you boot drm-tip with kernel parameters drm.debug=0x1e log_buf_len=4M and attach the dmesg log if the error still occurs?
Comment 3 qwang13 2019-10-17 05:22:29 UTC
Created attachment 145760 [details]
dmesg out with debug option

latest drm-tip upstream kernel 5.4-rc3

dmesg out with debug option
Comment 4 qwang13 2019-10-17 05:23:08 UTC
Created attachment 145761 [details]
lspci -vn output

lspci -vn output
Comment 5 James Ausmus 2019-10-17 17:34:27 UTC
(In reply to qwang13 from comment #3)
> Created attachment 145760 [details]
> dmesg out with debug option
> 
> latest drm-tip upstream kernel 5.4-rc3
> 
> dmesg out with debug option

This is the log from a 5.3.0-18-generic kernel, and doesn't have drm.debug=0xe set, did the wrong log get attached?
Comment 6 James Ausmus 2019-10-17 19:43:09 UTC
Looks like even the AML IDs that act like CFLs can be paired with the SPT PCH. Patch at https://patchwork.freedesktop.org/patch/336416/
Comment 7 James Ausmus 2019-10-22 17:10:16 UTC
Patch merged:

a201b00e5248 drm/i915/aml: Allow SPT PCH for all AML devices


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.